--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -4,10 +4,11 @@
     android:id="@+id/relative"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/wall"
+    android:background="@drawable/intro"
     android:padding="16dp">
 
     <pl.droidsonroids.gif.GifTextView
+        android:id="@+id/gif"
         android:layout_width="70dp"
         android:layout_height="70dp"
         android:layout_marginTop="520dp"
@@ -18,11 +19,10 @@
         android:id="@+id/text1"
         android:layout_width="90dp"
         android:layout_height="wrap_content"
-        android:layout_marginLeft="15dp"
-        android:layout_marginTop="250dp"
+        android:layout_marginLeft="130dp"
+        android:layout_marginTop="30dp"
         android:gravity="center"
         android:text="Chúc\n Mừng\n Năm\n Mới"
-        android:textColor="#d91818"
         android:textSize="30sp"
         android:textStyle="bold" />
 
@@ -30,11 +30,10 @@
         android:id="@+id/text2"
         android:layout_width="111dp"
         android:layout_height="wrap_content"
-        android:layout_marginLeft="90dp"
-        android:layout_marginTop="290dp"
+        android:layout_marginLeft="205dp"
+        android:layout_marginTop="70dp"
         android:gravity="center"
         android:text="Vạn\n Sự\n Như\n Ý"
-        android:textColor="#d91818"
         android:textSize="30sp"
         android:textStyle="bold" />
 
